Fix crashes, display costs in spell designer, better break spell